# bergen

./: .gitignore  LICENSE  README.md  bergen.cabal  stack.yaml
category/src/Math/: Algebra.hs  Bialgebra.hs  CoAlgebra.hs  Field.hs  Group.hs  HopfAlgebra.hs  Module.hs  Ring.hs  Test.hs  VectorSpace.hs
category/src/Math/Algebra/: TensorAlgebra.hs
category/src/Math/Instance/: Module.hs
category/src/Math/Module/: Category.hs  FreeModule.hs  TensorProduct.hs
category/src/Math/Monoid/: Test.hs  Test2.hs
category/src/Math/Properties/: Elements.hs  Operations.hs
category/src/Math/old/: Bialgebra.hs  HopfAlgebra.hs
category/src/Math/old/old2/: Algebra.hs  Bialgebra.hs  CoAlgebra.hs  HopfAlgebra.hs
graphics/: graphics.cabal
graphics/src/: Graphics.hs
graphics/src/Graphics/: Colour.hs
src/Math/: Algebra.hs  Bialgebra.hs  Coalgebra.hs  Group.hs  HopfAlgebra.hs  Module.hs  Monoid.hs  Ring.hs  Tree.hs  slette.hs  test.hs
src/Math/Algebra/: Algebra.hs  Bialgebra.hs  Coalgebra.hs  Group.hs  HopfAlgebra.hs  Module.hs  Monoid.hs  MonoidAlgebra.hs  Ring.hs
src/Math/Algebra/Algebra/: MonoidAlgebra.hs
src/Math/Algebra/Algebras/: MonoidAlgebra.hs
src/Math/Algebra/Module/: FreeModule.hs
src/Math/Algebra/Properties/: Elements.hs  Operations.hs
src/Math/Combinatorics/: Tree.hs
src/Math/Combinatorics/Tree/: Operations.hs
src/Math/Module/: FreeModule.hs
src/Math/Properties/: Operations.hs
src/Math/TEMP/: Collection.hs  Enumerable.hs  FreeMonoid.hs  HasEmpty.hs  Lean.hs
src/Math/doc/: treedoc.hs
src/old/Math/Algebra/: Algebra.hs  Bialgebra.hs  Coalgebra.hs  Module.hs
src/old/Math/Algebra/Module/: FreeModule.hs
test/Math/: AlgebraTest.hs  BialgebraTest.hs  GroupTest.hs  HopfAlgebraTest.hs  ModuleTest.hs  MonoidTest.hs  RingTest.hs
