name:                bergen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kfollesdal/bergen2#readme
license:             BSD3
license-file:        LICENSE
author:              Kristoffer K. Føllesdal
maintainer:          kfollesdal@gmail.com
copyright:           FILL IN
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Monoid
  build-depends:       base >= 4.7 && < 5
                       , integer-gmp
  default-language:    Haskell2010

-- executable bergen-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , bergen
--   default-language:    Haskell2010

test-suite bergen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bergen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kfollesdal/bergen2
