name:           graphics
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/githubuser/graphics#readme>
homepage:       https://github.com/githubuser/graphics#readme
bug-reports:    https://github.com/githubuser/graphics/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2017 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10


library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , bergen
    , diagrams-lib
    , diagrams-contrib
    , diagrams-svg
    , containers
    , colour
  exposed-modules:
      Graphics
      Graphics.Colour
  default-language: Haskell2010

-- test-suite graphics-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >= 4.7 && < 5
--     , graphics
--   default-language: Haskell2010
